--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" src="">
+        <meta name="description" content="Un lieu pour travailler ou règne la sérénité">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
