--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Evad'espace - Travailler sereinement{% endblock %}
+{% block title %}Evad'espace - Travaillez sereinement{% endblock %}
 
 {% block body %}
-<h1>homepage</h1>
+{% include "partials/_header.html.twig" %}
 {% endblock %}
