--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
+    <style>
+  @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+</style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
