update register header footer

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,5 +1,5 @@
 <header class="d-flex">
-    <img src="{{asset('images/logo.png')}}" alt="Logo Evad'espace" class="logo">
+    <a href="{{path('home')}}"><img src="{{asset('images/logo.png')}}" alt="Logo Evad'espace" class="logo"></a>
     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list menu-mobile" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
 </svg>
@@ -8,12 +8,25 @@
   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
 </svg>
 <nav class="burger">
-    <a href="www.google.com"><li>Evad'bureaux privés</li></a>
-    <a><li>Evad'bureaux partagés</li></a>
-    <a><li>Evad'graphique</li></a>
-    <a><li>Evad'évennement</li></a>
-    <a><li>Evad'atelier</li></a>
-    <a><li class="call-me">On s'appelle ?</li></a>
+    <div class="dropdown">
+        <a href="#">
+            <div class="dropbtn" id="dropdown-btn">Evad'bureaux partagés <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" id="arrow-down" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+  <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+</svg></div>
+        </a>
+        <div class="dropdown-content" id="dropdown-content">
+            <a href="#">Postes attitrés</a>
+            <a href="#">De passage en openspace</a>
+            <a href="#">Passages réguliers</a>
+        </div>
+    </div>
+    <a><div class="dropbtn">Evad'bureaux privés</div></a>
+    <a><div class="dropbtn">Evad'graphique</div></a>
+    <a><div class="dropbtn">Evad'événement</div></a>
+    <a><div class="dropbtn">Evad'atelier</div></a>
+    <a><div class="dropbtn call-me">On s'appelle ?</div></a>
 </nav>
+
+
 </header>
 
