--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,6 +50,7 @@
         <p class="text-center">{{review.getRating}}</p>
     {% endfor %} #}
 </div>
+<div class="end"></div>
 </main>
 {% include "partials/_footer.html.twig" %}
 {% endblock %}
