--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,21 +3,68 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+    {% include "partials/_header.html.twig" %}
+    <main>
+        {% for flash_error in app.flashes('verify_email_error') %}
+            <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+        {% endfor %}
 
-    <h1>Register</h1>
+        <h1 class="title">Inscription</h1>
+        <div id="registration-form">
+            <div id="partOne" class="form-part">
+                {{ form_errors(registrationForm) }}
+                {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.email, {
+                    label: 'Email'
+                }) }}
+                {{ form_row(registrationForm.plainPassword, {
+                    label: 'Mot de passe'
+                }) }}
+                {{ form_row(registrationForm.firstname, {
+                    label: 'Prénom'
+                }) }}
+                {{ form_row(registrationForm.name, {
+                    label: 'Nom'
+                }) }}
+                <button class="btn-rose btn-register next">Suivant</button>
+            </div>
+            <div id="partTwo" class="form-part">
+                {{ form_row(registrationForm.company, {
+                    label: 'Entreprise'
+                }) }}
+                {{ form_row(registrationForm.address, {
+                    label: 'Adresse'
+                }) }}
+                {{ form_row(registrationForm.postcode, {
+                    label: 'Code postal'
+                }) }}
+                {{ form_row(registrationForm.agreeTerms, {
+                    label: 'Accepter les CGV'
+                }) }}
+                <button type="submit" class="btn-rose btn-register">Inscription</button>
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+        <div class="end"></div>
+    </main>
+    {% include "partials/_footer.html.twig" %}
 
-    {{ form_errors(registrationForm) }}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const partOne = document.getElementById('partOne');
+            const partTwo = document.getElementById('partTwo');
+            const nextButton = document.querySelector('.next');
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            nextButton.addEventListener('click', function () {
+                partOne.style.transform = 'rotateY(180deg)';
+                partTwo.style.display = 'block';
+                partTwo.style.transform = 'rotateY(90deg)';
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                setTimeout(function () {
+                    partOne.style.display = 'none';
+                    partTwo.style.transform = 'rotateY(0deg)';
+                }, 00); // Attendre 1000 ms (1 seconde) avant de masquer partOne
+            });
+        });
+    </script>
 {% endblock %}
