--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -43,14 +43,20 @@
   </div>
 </div>
 <h2><img src="{{asset('images/avis.svg')}}" alt="image de bureu" style="margin-right: 20px;">Les avis</h2>
+    {% for review in reviews %}
 <div class="review mt-5 m-auto">
-    {# {% for avi in review %}
-        <h4 class="text-center">{{review.getAuthor}}</h4>
-        <p class="text-center">{{review.getMessage}}</p>
-        <p class="text-center">{{review.getRating}}</p>
-    {% endfor %} #}
+    {% if review.author is not null %}
+        <h4 class="text-center pt-2">{{review.author.firstname}}</h4>
+    {% endif %}
+        <p class="text-center mt-1">{{review.message}}</p>
+        <p class="text-center">{{review.getWorkspace}}</p>
+        <p class="text-center pb-3">{{review.getRating}} /5</p>
 </div>
+    {% endfor %}
 <div class="end"></div>
 </main>
 {% include "partials/_footer.html.twig" %}
 {% endblock %}
+{# {% for langage in project.langages %}
+{{ langage.getLangage() }}{% if not loop.last %}, {% endif %}
+{% endfor %} #}
