--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -7,6 +7,16 @@
 <main>
 <a class="deconexion" href="{{path('app_logout')}}">Déconnexion</a>
 <h1>Compte de {{user.firstname}}</h1>
+
+<ul>
+    <li><a href="">Réserver un crénau</a></li>
+    <li><a href="">Paiments</a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+</ul>
+<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Tooltip on bottom">
+  Tooltip on bottom
+</button>
 </main>
 {% include "partials/_footer.html.twig" %}
 {% endblock %}
