--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -12,7 +12,7 @@
   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
 </svg>
 <nav class="burger">
-    <div class="dropdown">
+    {# <div class="dropdown">
         <a href="#">
             <div class="dropbtn" id="dropdown-btn">Evad'bureaux partagés <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" id="arrow-down" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
   <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
@@ -23,11 +23,13 @@
             <a href="#">De passage en openspace</a>
             <a href="#">Passages réguliers</a>
         </div>
-    </div>
-    <a><div class="dropbtn">Evad'connexion</div></a>
-    <a><div class="dropbtn">Evad'bureaux privés</div></a>
-    <a><div class="dropbtn">Evad'événement</div></a>
-    <a><div class="dropbtn">Evad'atelier</div></a>
+    </div> #}
+    <a href="{{path('app_office_sharing')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
+    <a href="{{path('app_office_private')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
+    <a href="{{path('app_office_event')}}"><div class="dropbtn">Evad'événement</div></a>
+    <a href="{{path('app_office_meeting')}}"><div class="dropbtn">Evad'réunion</div></a>
+    <a href="{{path('app_office_work')}}"><div class="dropbtn">Evad'atelier</div></a>
+    <a href="{{path('app_office_domicile')}}"><div class="dropbtn">Evad'domiciliation</div></a>
     <a><div class="dropbtn call-me">On s'appelle ?</div></a>
 </nav>
 
