--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -14,6 +14,7 @@
   <p>Prix: {{work.price / 100}}€</p>
 {% endfor %}
 </div>
+{# <p>{{works}}</p> #}
 <ul>
     <li><a href="">Réserver un crénau</a></li>
     <li><a href="{{path('app_payment')}}">Paiments</a></li>
