--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -53,7 +53,7 @@
             {% if review.workspace is not null %}
                 <p class="text-center workspace"> Espace de travail : {{review.Workspace.name}}</p>
             {% endif %}
-                <p class="text-center pb-2">{{review.getRating}} /5</p>
+                <p class="text-center pb-2">Note:  {{review.getRating}} /5</p>
         </div>
     {% endfor %}
     </div>
