--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -30,6 +30,7 @@
     <a href="{{path('app_office_meeting')}}"><div class="dropbtn">Evad'réunion</div></a>
     <a href="{{path('app_office_work')}}"><div class="dropbtn">Evad'atelier</div></a>
     <a href="{{path('app_office_domicile')}}"><div class="dropbtn">Evad'domiciliation</div></a>
+    <a href="{{path('app_tarif')}}"><div class="dropbtn">Tarifs</div></a>
     <a><div class="dropbtn call-me">On s'appelle ?</div></a>
 </nav>
 
