--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -1,20 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PaymentController!{% endblock %}
+{% block title %}Tarifs{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/romain/dev/projet-dev/Evadespace/src/Controller/PaymentController.php'|file_link(0) }}">src/Controller/PaymentController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/romain/dev/projet-dev/Evadespace/templates/payment/index.html.twig'|file_link(0) }}">templates/payment/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% include "partials/_header.html.twig" %}
+<main>
+    <h1>Choisissez votre bureau !</h1>
+    <div class="container text-center mt-5 pb-4">
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <div class="card">
+                    <div class="content">
+                        <div class="title-card">Bureau privé</div>
+                            <div class="price">25.00€</div>
+                                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                </div>
+                            </div>
+                            <button class="btn-rose btn-buy">Acheter</button>
+                            </div>
+                        </div>
+            <div class="col d-flex justify-content-center">
+                <div class="card">
+                    <div class="content">
+                        <div class="title-card">Poste attitré</div>
+                            <div class="price">39.99€</div>
+                                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                </div>
+                            </div>
+                            <button class="btn-rose btn-buy">Acheter</button>
+                            </div>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                <div class="card">
+                    <div class="content">
+                        <div class="title-card">Bureaux partagés</div>
+                            <div class="price">20.00€</div>
+                                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                </div>
+                            </div>
+                            <button class="btn-rose btn-buy">Acheter</button>
+                            </div>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                <div class="card">
+                    <div class="content">
+                        <div class="title-card">De passage</div>
+                            <div class="price">15.00€</div>
+                                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                </div>
+                            </div>
+                            <button class="btn-rose btn-buy">Acheter</button>
+                            </div>
+                        </div>
+        </div>
+    </div>
+</main>
+{% include "partials/_footer.html.twig" %}
 {% endblock %}
