--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,8 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+            {% include "partials/_flash.html.twig" %}
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
