--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,4 +1,4 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Comfirmez votre email !</h1>
 
 <p>
     Veuillez comfirmer votre email en cliquant sur le lien suivant: <br><br>
