--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -24,7 +24,7 @@
             <a href="#">Passages réguliers</a>
         </div>
     </div> #}
-    <a href="{{path('app_office_sharing')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
+    <a href="{{path('app_office_sharing')}}"><div class="dropbtn">Evad'bureaux partagés</div></a>
     <a href="{{path('app_office_private')}}"><div class="dropbtn">Evad'bureaux privés</div></a>
     <a href="{{path('app_office_event')}}"><div class="dropbtn">Evad'événement</div></a>
     <a href="{{path('app_office_meeting')}}"><div class="dropbtn">Evad'réunion</div></a>
