update button "reserver"

--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -16,7 +16,7 @@
                                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                                 </div>
                             </div>
-                            <button class="btn-rose btn-buy">Acheter</button>
+                            <button class="btn-rose btn-buy">Reserver</button>
                             </div>
                         </div>
             <div class="col d-flex justify-content-center">
@@ -27,7 +27,7 @@
                                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                                 </div>
                             </div>
-                            <button class="btn-rose btn-buy">Acheter</button>
+                            <button class="btn-rose btn-buy">Reserver</button>
                             </div>
                         </div>
                         <div class="col d-flex justify-content-center">
@@ -38,7 +38,7 @@
                                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                                 </div>
                             </div>
-                            <button class="btn-rose btn-buy">Acheter</button>
+                            <button class="btn-rose btn-buy">Reserver</button>
                             </div>
                         </div>
                         <div class="col d-flex justify-content-center">
@@ -49,7 +49,7 @@
                                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                                 </div>
                             </div>
-                            <button class="btn-rose btn-buy">Acheter</button>
+                            <button class="btn-rose btn-buy">Reserver</button>
                             </div>
                         </div>
         </div>
