--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -39,7 +39,7 @@
     <p class="card-text">Profitez de nos salles chaleureuse. Un cadre idéal pour recevoir vos équipes, vos prospects ou vos client !</p>
     <a href="#" class="btn-card"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
-</svg>Je cécouvre</a>
+</svg>  Je découvre</a>
   </div>
 </div>
 <h2><img src="{{asset('images/avis.svg')}}" alt="image de bureu" style="margin-right: 20px;">Les avis</h2>
