--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,1 +1,69 @@
-/*# sourceMappingURL=app.css.map */
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Dosis", sans-serif;
+  background: #faf2d9;
+  overflow-x: hidden;
+}
+
+header {
+  background: #ffa29a;
+  height: 80px;
+}
+
+.menu-mobile {
+  position: absolute;
+  right: 5%;
+  top: 2%;
+}
+
+.menu-close-mobile {
+  position: absolute;
+  right: 6.5%;
+  top: 2.8%;
+}
+
+.logo {
+  width: 80px;
+  height: 80px;
+}
+
+.personn {
+  position: absolute;
+  right: 25%;
+  top: 3.3%;
+}
+
+.burger {
+  background: #ffa29a;
+  position: relative;
+  top: -4px;
+  left: 30%;
+  padding-left: 30px;
+  border-radius: 0 0 0 20px;
+}
+
+nav > a {
+  font-size: 1.4rem;
+  color: #5d6371;
+  text-decoration: none;
+  padding: 1px;
+}
+
+@media screen and (min-width: 400px) {
+  .menu-close-mobile {
+    position: absolute;
+    right: 5.5%;
+  }
+  .personn {
+    right: 13%;
+  }
+}
+h1 {
+  margin-left: 16%;
+}
+
+span {
+  background: #b4f2e5;
+}/*# sourceMappingURL=app.css.map */
