--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,6 +5,7 @@ body {
   font-family: "Dosis", sans-serif;
   background: #faf2d9;
   overflow-x: hidden;
+  font-weight: 300;
 }
 
 header {
@@ -60,10 +61,85 @@ nav > a {
     right: 13%;
   }
 }
-h1 {
-  margin-left: 16%;
+main > h1 {
+  text-align: center;
 }
 
 span {
   background: #b4f2e5;
+}
+
+.encart {
+  margin-top: 60px;
+  margin-left: 5%;
+  display: flex;
+}
+
+.p-encart {
+  margin-left: 4%;
+  margin-top: -2%;
+}
+
+h2 {
+  margin-left: 10%;
+  margin-top: 40px;
+}
+
+p {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 1.2em;
+}
+
+.photo-mobile > img {
+  border-radius: 15px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+}
+
+h3 {
+  margin-left: 5%;
+  margin-top: 30px;
+}
+
+.btn-rose {
+  border-radius: 10px;
+  background: #ffa29a;
+  padding: 9px;
+  margin-left: 7%;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: #5d6371;
+  box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+}
+
+.group {
+  margin-bottom: 50px;
+}
+
+.card {
+  border-radius: 5px;
+  background: #5d6371;
+  margin: auto;
+}
+
+.card-img-top {
+  width: 100%;
+}
+
+.card-title {
+  font-size: 1.5em;
+}
+
+@media screen and (min-width: 400px) {
+  h1 {
+    font-size: 4rem;
+    font-weight: 300;
+  }
 }/*# sourceMappingURL=app.css.map */
