--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,6 +5,7 @@ body {
   font-family: "Dosis", sans-serif;
   background: #faf2d9;
   overflow-x: hidden;
+  font-weight: 300;
 }
 $rose: #ffa29a;
 $beige: #faf2d9;
@@ -62,9 +63,76 @@ nav > a {
 }
 
 // ========================== MAIN ===========================================
-h1 {
-  margin-left: 16%;
+main > h1 {
+  text-align: center;
 }
 span {
   background: $vert;
+}
+
+.encart {
+  margin-top: 60px;
+  margin-left: 5%;
+  display: flex;
+}
+
+.p-encart {
+  margin-left: 4%;
+  margin-top: -2%;
+}
+h2 {
+  margin-left: 10%;
+  margin-top: 40px;
+}
+p {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 1.2em;
+}
+.photo-mobile > img {
+  border-radius: 15px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: -1px 1px 65px -4px rgba(0, 0, 0, 0.8);
+  // margin-top: 30px;
+}
+h3 {
+  margin-left: 5%;
+  margin-top: 30px;
+}
+
+.btn-rose {
+  border-radius: 10px;
+  background: $rose;
+  padding: 9px;
+  margin-left: 7%;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: $gris;
+  box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+  -webkit-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+}
+.group {
+  margin-bottom: 50px;
+}
+.card {
+  border-radius: 5px;
+  background: $gris;
+  margin: auto;
+}
+.card-img-top {
+  width: 100%;
+}
+.card-title {
+  font-size: 1.5em;
+}
+@media screen and (min-width: 400px) {
+  h1 {
+    font-size: 4rem;
+    font-weight: 300;
+  }
 }
