end card page home

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -124,17 +124,40 @@ h3 {
 }
 
 .card {
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   background: #5d6371;
   margin: auto;
+  height: 400px;
 }
 
 .card-img-top {
   width: 100%;
 }
 
+.card-body {
+  color: #faf2d9;
+}
+.card-body > h5 {
+  margin-top: 3px;
+}
+
 .card-title {
   font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.card-text {
+  margin-top: 10px;
+  text-justify: auto;
+}
+
+.btn-card {
+  color: #ffa29a;
+  text-decoration: none;
+  position: relative;
+  left: 160px;
+  font-size: larger;
 }
 
 @media screen and (min-width: 400px) {
