--- a/templates/office_sharing/work.html.twig
+++ b/templates/office_sharing/work.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 {% include "partials/_header.html.twig" %}
 <main>
-<h1>Les atelier</h1>
+<h1>Les ateliers</h1>
 <div class="text text-w mt-5 mb-5">
     
 </div>
