--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -105,6 +105,7 @@ h3 {
 }
 
 .btn-rose {
+  border: 1px solid $rose;
   border-radius: 10px;
   background: $rose;
   padding: 9px;
@@ -115,12 +116,16 @@ h3 {
   box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
   -webkit-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: -1px 2px 7px 4px rgba(0, 0, 0, 0.28);
+  &:hover {
+    background: #fb867b;
+    transition-duration: 0.5s;
+  }
 }
 .group {
   margin-bottom: 50px;
 }
 .card {
-  border-radius: 5px;
+  border-radius: 15px;
   background: $gris;
   margin: auto;
   height: 400px;
@@ -182,7 +187,7 @@ h3 {
 .carousel {
   position: relative;
   overflow: hidden;
-  height: 200px; /* Ajustez la hauteur selon vos besoins */
+  height: 300px; /* Ajustez la hauteur selon vos besoins */
 }
 
 .review {
@@ -192,7 +197,7 @@ h3 {
   left: 50%;
   width: 75%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 15px;
   transform: translateX(-50%);
 }
 
@@ -201,4 +206,50 @@ h3 {
 }
 .text-center {
   text-align: center;
+}
+// ===================================== FOOTER ====================================
+footer {
+  background: $rose;
+  height: 80px;
+  & h5 {
+    padding: 10px;
+    font-size: 1.3em;
+  }
+}
+
+// ========================================== FORM CONNEXION ====================================
+.connexion {
+  margin: auto;
+  border: 3px solid $rose;
+  border-radius: 15px;
+  height: 300px;
+  width: 60%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centre les éléments à l'intérieur de la div */
+}
+
+.connexion label {
+  align-self: flex-start;
+  margin-left: 45px; /* Aligne les labels à gauche */
+  // margin-bottom: 10px;
+}
+
+.connexion input {
+  margin-bottom: 20px;
+  width: 70%;
+  background: $beige;
+  border: 2px solid $rose;
+  border-radius: 5px;
+  caret-color: $rose; /* Optionnel : pour faire en sorte que les inputs prennent toute la largeur disponible */
+}
+.connexion input:focus {
+  outline: none;
+  border: 2px solid $gris;
+}
+
+.btn-connexion {
+  margin: auto;
+  margin-top: 40px !important;
 }
