--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,10 +17,10 @@
     {% endif %}
 
     <h1 class="h3 mb-3" style="margin-left: 17%;">Connexion</h1>
-    <div class="registration-form">
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword" class="mt-3">Mot de passe</label>
+    <div class="connexion">
+    <label for="inputEmail">Email</label> <br>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> <br>
+    <label for="inputPassword" class="mt-3">Mot de passe</label> <br>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -29,7 +29,7 @@
    <div>
         <a href="{{path('app_register')}}" style="color: #5d6371; text-decoration: underline;">Je m'inscris !</a>
    </div>
-    <button class="btn btn-lg btn-rose mt-4 m-auto" type="submit">
+    <button class="btn-rose btn-connexion" type="submit">
         Connexion
     </button>
     </div>
