--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,9 +18,9 @@
 
     <h1 class="h3 mb-3" style="margin-left: 17%;">Connexion</h1>
     <div class="connexion">
-    <label for="inputEmail">Email</label> <br>
+    <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> <br>
-    <label for="inputPassword" class="mt-3">Mot de passe</label> <br>
+    <label for="inputPassword" class="mt-3">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
